--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,16 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "201611090"
+       "0      백창환\n",
+       "1      전기환\n",
+       "2      정래현\n",
+       "3       박건\n",
+       "4      박건희\n",
+       "      ... \n",
+       "141    최효빈\n",
+       "142    한주연\n",
+       "143    홍지수\n",
+       "144    황지영\n",
+       "145    박지훈\n",
+       "Name: Name, Length: 146, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,10 +30,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('./studentID.csv')\n",
+    "df_ID = pd.read_csv('./studentID.csv')\n",
+    "df_att = pd.read_csv('./Attendance.csv')\n",
     "\n",
-    "\n",
-    "df['Student ID'][0]"
+    "df_att['Name']"
    ]
   }
  ],
