--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -61,13 +61,10 @@
     "for i in range(len(df_class)):\n",
     "    (hour, minute, second) = df_class['Time'][i].split(\":\")\n",
     "\n",
-    "    \"\"\"\n",
-    "    if(int(hour) > 16):\n",
+    "    if(int(hour) > 16 and int(minute)>5):\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'L'\n",
     "    else:\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
-    "    \"\"\"\n",
-    "    df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
