--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -41,12 +41,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 날짜 확인하세요!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-03-16'\n",
+    "class_date = '2023-03-??'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
