--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#수기 출석\n",
-    "#df_att.loc[df_att['Student ID'] == 202211152, class_date] = 'A'"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -50,17 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-03-??'\n",
+    "class_date = '2023-03-21'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +63,9 @@
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'L'\n",
     "    else:\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
+    "\n",
+    "#수기 출석(정은호 202011203)\n",
+    "#df_att.loc[df_att['Student ID'] == 202011203, class_date] = 'A'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
