--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-03-21'\n",
+    "class_date = '2023-03-28'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
@@ -66,6 +66,8 @@
     "\n",
     "#수기 출석(정은호 202011203)\n",
     "#df_att.loc[df_att['Student ID'] == 202011203, class_date] = 'A'\n",
+    "#df_att.loc[df_att['Student ID'] == 201811075, class_date] = 'A'\n",
+    "#df_att.loc[df_att['Student ID'] == 202211211, class_date] = 'A'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
