--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,22 +35,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 날짜 확인하세요!"
+    "# 날짜 확인하세요!\n",
+    "## csv 파일 첫줄에 아래의 label 삽입하세요!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-03-28'\n",
+    "# Student ID,UID,Time,Date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_date = '2023-03-30'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +75,10 @@
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
     "#수기 출석(정은호 202011203)\n",
-    "#df_att.loc[df_att['Student ID'] == 202011203, class_date] = 'A'\n",
-    "#df_att.loc[df_att['Student ID'] == 201811075, class_date] = 'A'\n",
-    "#df_att.loc[df_att['Student ID'] == 202211211, class_date] = 'A'\n",
+    "#수기 출석(최한슬 202211211)\n",
+    "df_att.loc[df_att['Student ID'] == 202011203, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202211211, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 201811075, class_date] = 'A'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
