--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-03-30'\n",
+    "class_date = '2023-04-04'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +74,12 @@
     "    else:\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
-    "#수기 출석(정은호 202011203)\n",
     "#수기 출석(최한슬 202211211)\n",
-    "df_att.loc[df_att['Student ID'] == 202011203, class_date] = 'A'\n",
+    "#수기 출석(장민준 202211163)\n",
+    "#수기 출석(박상혁 202211077)\n",
     "df_att.loc[df_att['Student ID'] == 202211211, class_date] = 'A'\n",
-    "df_att.loc[df_att['Student ID'] == 201811075, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202211163, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202211077, class_date] = 'A'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
@@ -102,7 +103,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "932df198d7dcd685ab299fc36149492c0480a183e04d308adef0af65ac800552"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
