--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-04-06'\n",
+    "class_date = '2023-04-11'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
@@ -75,11 +75,11 @@
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
     "#수기 출석(최한슬 202211211)\n",
+    "#0411 0413 코로나 확진 최은서 202211205\n",
     "#수기 출석(장민준 202211163)\n",
     "#수기 출석(전연규 202211172)\n",
-    "df_att.loc[df_att['Student ID'] == 202211211, class_date] = 'A'\n",
-    "df_att.loc[df_att['Student ID'] == 202211163, class_date] = 'A'\n",
-    "df_att.loc[df_att['Student ID'] == 202211172, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202211118, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202211152, class_date] = 'L'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
