--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "수강생 중간고사 기준 132명"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-04-13'\n",
+    "class_date = '2023-04-25'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +84,8 @@
     "\n",
     "#수기 출석(최한슬 202211211)\n",
     "#0411 0413 코로나 확진 최은서 202211205\n",
-    "df_att.loc[df_att['Student ID'] == 202211112, class_date] = 'A'\n",
-    "df_att.loc[df_att['Student ID'] == 202211205, class_date] = 'L'\n",
+    "#df_att.loc[df_att['Student ID'] == 202211112, class_date] = 'A'\n",
+    "#df_att.loc[df_att['Student ID'] == 202211205, class_date] = 'L'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
