--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-04-25'\n",
+    "class_date = '2023-04-27'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
@@ -83,8 +83,7 @@
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
     "#수기 출석(최한슬 202211211)\n",
-    "#0411 0413 코로나 확진 최은서 202211205\n",
-    "#df_att.loc[df_att['Student ID'] == 202211112, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202211222, class_date] = 'A'\n",
     "#df_att.loc[df_att['Student ID'] == 202211205, class_date] = 'L'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
