--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "수강생 중간고사 기준 132명"
+    "수강생 중간고사 기준 131명"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-04-27'\n",
+    "class_date = '2023-05-04'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,9 @@
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
     "#수기 출석(최한슬 202211211)\n",
-    "df_att.loc[df_att['Student ID'] == 202211222, class_date] = 'A'\n",
-    "#df_att.loc[df_att['Student ID'] == 202211205, class_date] = 'L'\n",
+    "df_att.loc[df_att['Student ID'] == 202211163, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 202011014, class_date] = 'A'\n",
+    "df_att.loc[df_att['Student ID'] == 201811058, class_date] = 'L'\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
