--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-05-04'\n",
+    "class_date = '2023-05-09'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
@@ -83,9 +83,8 @@
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
     "#수기 출석(최한슬 202211211)\n",
-    "df_att.loc[df_att['Student ID'] == 202211163, class_date] = 'A'\n",
-    "df_att.loc[df_att['Student ID'] == 202011014, class_date] = 'A'\n",
-    "df_att.loc[df_att['Student ID'] == 201811058, class_date] = 'L'\n",
+    "#df_att.loc[df_att['Student ID'] == 202211159, class_date] = 'A'\n",
+    "\n",
     "\n",
     "df_att.to_csv('./data/attendance.csv', index=False)"
    ]
