--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ID = pd.read_csv('./data/student.csv')\n",
+    "df_data = pd.read_csv('./data/reading.csv')\n",
+    "df = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_ID' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/admin/Development/ws_Raspberry/rasberrypi_nfc/process_data.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/admin/Development/ws_Raspberry/rasberrypi_nfc/process_data.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mStudent ID\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mNone\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(df_ID)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/admin/Development/ws_Raspberry/rasberrypi_nfc/process_data.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mName\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mNone\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(df_ID)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/admin/Development/ws_Raspberry/rasberrypi_nfc/process_data.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mUID\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mNone\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(df_ID)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_ID' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200045 김선준 None\n",
+      "202422005 김문정 fd  b0  34  c5  \n",
+      "202422022 백민혁 87  f3  c7  5c  \n",
+      "202428009 마상균 5d  9e  33  c5  \n",
+      "201811063 박영석 22  3b  a8  e5  \n",
+      "201811028 김승현 42  8b  b0  e5  \n",
+      "201911048 노민성 b3  d9  5d  b5  \n",
+      "201911159 정회성 4e  38  23  14  \n",
+      "201911165 조윤성 37  69  8c  5c  \n",
+      "201911090 안정후 ab  3e  d7  4e  \n",
+      "201911162 조상우 13  5b  5e  b5  \n",
+      "201911157 정해익 d3  14  67  b5  \n",
+      "201911185 추성재 83  d6  64  b5  \n",
+      "202011056 김종진 43  4e  5e  b5  \n",
+      "202011086 박재민 92  d3  af  e5  \n",
+      "202011102 서지원 d2  3f  b0  e5  \n",
+      "202011187 장믿음 82  48  b0  e5  \n",
+      "202011052 김웅기 e3  18  5c  b5  \n",
+      "202011118 엄유성 22  51  b0  e5  \n",
+      "202011103 성민승 2b  18  d2  4d  \n",
+      "202011120 오상규 b3  81  63  b5  \n",
+      "202011094 박현우 73  bc  64  b5  \n",
+      "202011100 백지훈 fe  e2  20  14  \n",
+      "202111164 정다현 b7  4b  c5  5c  \n",
+      "202111058 문수민 83  2e  60  b5  \n",
+      "202111061 박규현 d3  e0  5f  b5  \n",
+      "202111107 양민우 43  81  61  b5  \n",
+      "202111012 권병준 d3  98  5f  b5  \n",
+      "202111051 남도혁 e2  31  ae  e5  \n",
+      "202111024 김미송 23  ae  67  b5  \n",
+      "202111139 이유석 13  d6  60  b5  \n",
+      "202111119 윤경훈 d3  1a  67  b5  \n",
+      "202111038 김재환 f2  68  ac  e5  \n",
+      "202111021 김도훈 b3  4d  60  b5  \n",
+      "202111079 박진홍 d3  8c  5d  b5  \n",
+      "202111185 최성우 93  39  62  b5  \n",
+      "202111085 백원중 c2  35  af  e5  \n",
+      "202111033 김신욱 e2  06  ab  e5  \n",
+      "202111163 정기용 b3  cd  5b  b5  \n",
+      "202111124 이건하 13  b5  5b  b5  \n",
+      "202111122 윤태인 d3  bf  62  b5  \n",
+      "202111125 이기헌 93  e2  61  b5  \n",
+      "202111104 안위수 b3  8a  62  b5  \n",
+      "202111008 곽도영 43  4d  25  ae  \n",
+      "202111141 이재진 43  12  68  b5  \n",
+      "202111060 박건우 43  99  66  b5  \n",
+      "202211071 마서진 03  9b  24  ae  \n",
+      "202211076 박나영 3b  03  ec  4d  \n",
+      "202211206 최재영 0b  42  9e  4e  \n",
+      "202211214 최효빈 3b  05  82  4e  \n",
+      "202211036 김여진 8b  af  1f  4e  \n",
+      "202211090 백현석 f7  81  c4  5c  \n",
+      "202211222 황지영 None\n",
+      "202211194 조형윤 db  ee  9b  4e  \n",
+      "202211219 홍지수 6b  81  43  4e  \n",
+      "202211094 서정규 c7  ec  c4  5c  \n",
+      "202211059 나해람 03  be  5f  b5  \n",
+      "202211103 신상은 eb  e0  c1  4e  \n",
+      "202211046 김정민 e3  2b  63  b5  \n",
+      "202211016 김나현 c3  a0  63  b5  \n",
+      "202211017 김나혜 f3  35  5e  b5  \n",
+      "202211152 이준 5b  c8  08  4e  \n",
+      "202211187 정해주 fb  80  64  4e  \n",
+      "202211044 김은송 93  11  5e  b5  \n",
+      "202211056 김호병 8b  3e  de  4e  \n",
+      "202211112 양슬아 7b  a3  ad  4e  \n",
+      "202211052 김현민 f3  07  68  b5  \n",
+      "202211142 이연수 e6  c4  33  04  \n",
+      "202211195 조후연 c6  f5  32  04  \n",
+      "202211075 박근희 ed  ed  03  c5  \n",
+      "202211210 최준호 fd  31  00  c5  \n",
+      "202211099 송유진 9b  69  16  4e  \n",
+      "202211053 김현수 03  e9  60  b5  \n",
+      "202211020 김동현 53  78  65  b5  \n",
+      "202323010 정상헌 db  82  f2  4d  \n",
+      "202311155 임정민 97  2b  88  5c  \n",
+      "202311051 김예원 d7  c7  c0  5c  \n",
+      "202311044 김선규 b7  41  c1  5c  \n",
+      "202311140 이윤호 db  dc  23  4e  \n",
+      "202311129 이민규 ab  e0  d6  4e  \n",
+      "202311138 이예준 None\n",
+      "202311088 박재현 bb  bf  a4  4e  \n",
+      "202311181 조한준 0b  98  1c  4e  \n",
+      "202311098 서주혁 1b  3b  61  4e  \n",
+      "202311206 허준서 27  f7  b5  5c  \n",
+      "202311037 김범수 57  4a  9f  5c  \n",
+      "202311001 강동원 None\n",
+      "202311182 조형준 cb  42  04  4e  \n",
+      "202311025 김동현 d7  6a  cb  5c  \n",
+      "202311180 조준호 eb  47  fe  4d  \n",
+      "202311132 이상아 2b  9a  d0  4e  \n",
+      "202311165 전준서 27  85  cb  5c  \n",
+      "202311131 이상민 a6  e2  31  04  \n",
+      "202311077 박민규 9b  4b  df  4e  \n",
+      "202311160 전선애 a7  f7  cb  5c  \n",
+      "202311024 김동헌 67  03  ae  5c  \n",
+      "202311006 고묘정 None\n",
+      "202311130 이민재 3b  46  9b  4e  \n",
+      "202311143 이재헌 16  74  33  04  \n",
+      "202311123 윤우성 1b  a2  b1  4e  \n",
+      "202311127 이나민 eb  36  a3  4e  \n",
+      "202311175 조승완 67  ef  c3  5c  \n",
+      "202311089 박정혁 6b  12  61  4e  \n",
+      "202311095 변호빈 db  c5  77  4e  \n",
+      "202311084 박은지 8b  2d  0b  4e  \n",
+      "202311134 이상윤 76  8e  33  04  \n",
+      "202311213 황태훈 47  7d  c0  5c  \n",
+      "202311082 박윤주 db  67  04  4e  \n",
+      "202311020 김도진 57  40  c4  5c  \n",
+      "202311211 황재서 97  85  c7  5c  \n",
+      "202311039 김보민 27  1a  8b  5c  \n",
+      "202311100 석재희 None\n",
+      "202311054 김우현 86  31  33  04  \n",
+      "202311057 김주형 db  95  f8  4d  \n",
+      "202311023 김동욱 87  78  ca  5c  \n",
+      "202311193 최예림 d7  b0  cc  5c  \n",
+      "202311045 김선우 a7  7d  c6  5c  \n",
+      "202311174 조수영 c7  5e  c8  5c  \n",
+      "202311052 김예은 0b  42  a1  4e  \n",
+      "202311148 이하나 16  b5  32  04  \n",
+      "202311040 김보민 57  4c  9f  5c  \n",
+      "202311026 김려원 67  fd  87  5c  \n",
+      "202311106 안태경 6b  77  ef  4d  \n",
+      "202311109 양태빈 None\n",
+      "202311069 남윤성 0b  96  24  4e  \n",
+      "202311210 홍의성 c7  f6  c8  5c  \n",
+      "202311007 고재호 17  9d  ca  5c  \n",
+      "202311122 윤신희 4b  67  d9  4e  \n",
+      "202311188 최가영 None\n",
+      "202311005 강태윤 46  9c  31  04  \n",
+      "202311191 최연우 cb  08  8b  4e  \n",
+      "202311055 김유진 cb  60  06  4e  \n",
+      "202311151 이현준 c7  5e  cc  5c  \n",
+      "202311086 박재민 bb  0e  d7  4e  \n",
+      "202311150 이헌재 97  3c  c5  5c  \n",
+      "202311133 이상욱 6b  08  e2  4e  \n",
+      "202311014 권우혁 57  a4  c0  5c  \n",
+      "202311137 이세윤 8b  1d  3e  4e  \n",
+      "202311053 김예진 bb  d2  7e  4e  \n",
+      "202311047 김수빈 27  fe  c7  5c  \n",
+      "202311033 김민재 b7  5c  99  5c  \n",
+      "202311169 정유리 17  c0  c7  5c  \n",
+      "202311189 최도윤 7b  d4  55  4e  \n",
+      "202311147 이채원 d7  a8  ad  5c  \n",
+      "202311158 장연우 57  e4  ca  5c  \n",
+      "202311173 조수연 None\n"
      ]
     }
    ],
@@ -54,8 +206,11 @@
     "    df['Student ID'][i] = sid\n",
     "    df['Name'][i] = name\n",
     "    df['UID'][i] = uid\n",
+    "\n",
     "    print(sid, name, uid)\n",
-    "    # 정은호 등록 안됨 이슈"
+    "    # 정은호 등록 안됨 이슈\n",
+    "\n",
+    "df.to_csv('./data/data.csv')"
    ]
   }
  ],
@@ -75,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
