--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -82,7 +82,7 @@
     "    else:\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
     "\n",
-    "#수기 출석(최한슬 202211211)\n",
+    "#수기 출석(201911048 shalstjd)\n",
     "#df_att.loc[df_att['Student ID'] == 202211159, class_date] = 'A'\n",
     "\n",
     "\n",
