--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 정은호, 서정규 등록 안됨."
+    "# 김시원, 박태준, 전선우, 정혜진, 강동원, 고묘정, 박은혜, 최가영, 최재영, 장민구"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200045 김선준 None\n",
       "202422005 김문정 fd  b0  34  c5  \n",
       "202422022 백민혁 87  f3  c7  5c  \n",
       "202428009 마상균 5d  9e  33  c5  \n",
@@ -61,10 +60,13 @@
       "202011118 엄유성 22  51  b0  e5  \n",
       "202011103 성민승 2b  18  d2  4d  \n",
       "202011120 오상규 b3  81  63  b5  \n",
+      "202011048 김시원 None\n",
+      "202011091 박태준 None\n",
       "202011094 박현우 73  bc  64  b5  \n",
       "202011100 백지훈 fe  e2  20  14  \n",
       "202111164 정다현 b7  4b  c5  5c  \n",
       "202111058 문수민 83  2e  60  b5  \n",
+      "202111170 정윤중 0d  d0  f7  c4  \n",
       "202111061 박규현 d3  e0  5f  b5  \n",
       "202111107 양민우 43  81  61  b5  \n",
       "202111012 권병준 d3  98  5f  b5  \n",
@@ -84,15 +86,17 @@
       "202111125 이기헌 93  e2  61  b5  \n",
       "202111104 안위수 b3  8a  62  b5  \n",
       "202111008 곽도영 43  4d  25  ae  \n",
+      "202111022 김동현 d3  c9  62  b5  \n",
       "202111141 이재진 43  12  68  b5  \n",
       "202111060 박건우 43  99  66  b5  \n",
+      "202211170 전선우 None\n",
       "202211071 마서진 03  9b  24  ae  \n",
       "202211076 박나영 3b  03  ec  4d  \n",
       "202211206 최재영 0b  42  9e  4e  \n",
       "202211214 최효빈 3b  05  82  4e  \n",
       "202211036 김여진 8b  af  1f  4e  \n",
       "202211090 백현석 f7  81  c4  5c  \n",
-      "202211222 황지영 None\n",
+      "202211222 황지영 9b  7b  d5  4e  \n",
       "202211194 조형윤 db  ee  9b  4e  \n",
       "202211219 홍지수 6b  81  43  4e  \n",
       "202211094 서정규 c7  ec  c4  5c  \n",
@@ -120,7 +124,7 @@
       "202311044 김선규 b7  41  c1  5c  \n",
       "202311140 이윤호 db  dc  23  4e  \n",
       "202311129 이민규 ab  e0  d6  4e  \n",
-      "202311138 이예준 None\n",
+      "202311170 정혜진 None\n",
       "202311088 박재현 bb  bf  a4  4e  \n",
       "202311181 조한준 0b  98  1c  4e  \n",
       "202311098 서주혁 1b  3b  61  4e  \n",
@@ -151,7 +155,7 @@
       "202311020 김도진 57  40  c4  5c  \n",
       "202311211 황재서 97  85  c7  5c  \n",
       "202311039 김보민 27  1a  8b  5c  \n",
-      "202311100 석재희 None\n",
+      "202311100 석재희 ab  f9  22  4e  \n",
       "202311054 김우현 86  31  33  04  \n",
       "202311057 김주형 db  95  f8  4d  \n",
       "202311023 김동욱 87  78  ca  5c  \n",
@@ -163,11 +167,12 @@
       "202311040 김보민 57  4c  9f  5c  \n",
       "202311026 김려원 67  fd  87  5c  \n",
       "202311106 안태경 6b  77  ef  4d  \n",
-      "202311109 양태빈 None\n",
+      "202311109 양태빈 07  87  88  5c  \n",
       "202311069 남윤성 0b  96  24  4e  \n",
       "202311210 홍의성 c7  f6  c8  5c  \n",
       "202311007 고재호 17  9d  ca  5c  \n",
       "202311122 윤신희 4b  67  d9  4e  \n",
+      "202311085 박은혜 None\n",
       "202311188 최가영 None\n",
       "202311005 강태윤 46  9c  31  04  \n",
       "202311191 최연우 cb  08  8b  4e  \n",
@@ -185,7 +190,17 @@
       "202311189 최도윤 7b  d4  55  4e  \n",
       "202311147 이채원 d7  a8  ad  5c  \n",
       "202311158 장연우 57  e4  ca  5c  \n",
-      "202311173 조수연 None\n"
+      "202311173 조수연 07  50  c7  5c  \n",
+      "202311075 박규원 ab  bc  d5  4e  \n",
+      "202311195 최재영 None\n",
+      "202311152 이휘성 d7  a7  87  5c  \n",
+      "202311083 박은빈 0b  36  d9  4e  \n",
+      "202311063 김현호 fb  1a  04  4e  \n",
+      "202311091 박주영 5b  68  9b  4e  \n",
+      "202311046 김수민 d7  27  c6  5c  \n",
+      "202311144 이종경 47  3d  c4  5c  \n",
+      "202311017 김다영 57  b7  b6  5c  \n",
+      "202311156 장민구 None\n"
      ]
     }
    ],
@@ -208,7 +223,6 @@
     "    df['UID'][i] = uid\n",
     "\n",
     "    print(sid, name, uid)\n",
-    "    # 정은호 등록 안됨 이슈\n",
     "\n",
     "df.to_csv('./data/data.csv')"
    ]
