240314 LMS 등록 인원 확인 완료

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>202422005</td>\n",
+       "      <td>김문정</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>202422022</td>\n",
+       "      <td>백민혁</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>202428009</td>\n",
+       "      <td>마상균</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>202111014</td>\n",
+       "      <td>김건호</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201811063</td>\n",
+       "      <td>박영석</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>202311144</td>\n",
+       "      <td>이종경</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>202311017</td>\n",
+       "      <td>김다영</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>202311156</td>\n",
+       "      <td>장민구</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>202311104</td>\n",
+       "      <td>안서연</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>202443005</td>\n",
+       "      <td>김승섭</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>162 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Student ID Name\n",
+       "0     202422005  김문정\n",
+       "1     202422022  백민혁\n",
+       "2     202428009  마상균\n",
+       "3     202111014  김건호\n",
+       "4     201811063  박영석\n",
+       "..          ...  ...\n",
+       "157   202311144  이종경\n",
+       "158   202311017  김다영\n",
+       "159   202311156  장민구\n",
+       "160   202311104  안서연\n",
+       "161   202443005  김승섭\n",
+       "\n",
+       "[162 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +160,7 @@
       "202422005 김문정 fd  b0  34  c5  \n",
       "202422022 백민혁 87  f3  c7  5c  \n",
       "202428009 마상균 5d  9e  33  c5  \n",
+      "202111014 김건호 None\n",
       "201811063 박영석 22  3b  a8  e5  \n",
       "201811028 김승현 42  8b  b0  e5  \n",
       "201911048 노민성 b3  d9  5d  b5  \n",
@@ -60,8 +178,8 @@
       "202011118 엄유성 22  51  b0  e5  \n",
       "202011103 성민승 2b  18  d2  4d  \n",
       "202011120 오상규 b3  81  63  b5  \n",
-      "202011048 김시원 None\n",
-      "202011091 박태준 None\n",
+      "202011048 김시원 7c  97  c1  dd  \n",
+      "202011091 박태준 b7  51  c8  5c  \n",
       "202011094 박현우 73  bc  64  b5  \n",
       "202011100 백지훈 fe  e2  20  14  \n",
       "202111164 정다현 b7  4b  c5  5c  \n",
@@ -77,7 +195,6 @@
       "202111038 김재환 f2  68  ac  e5  \n",
       "202111021 김도훈 b3  4d  60  b5  \n",
       "202111079 박진홍 d3  8c  5d  b5  \n",
-      "202111185 최성우 93  39  62  b5  \n",
       "202111085 백원중 c2  35  af  e5  \n",
       "202111033 김신욱 e2  06  ab  e5  \n",
       "202111163 정기용 b3  cd  5b  b5  \n",
@@ -89,7 +206,6 @@
       "202111022 김동현 d3  c9  62  b5  \n",
       "202111141 이재진 43  12  68  b5  \n",
       "202111060 박건우 43  99  66  b5  \n",
-      "202211170 전선우 None\n",
       "202211071 마서진 03  9b  24  ae  \n",
       "202211076 박나영 3b  03  ec  4d  \n",
       "202211206 최재영 0b  42  9e  4e  \n",
@@ -110,6 +226,7 @@
       "202211044 김은송 93  11  5e  b5  \n",
       "202211056 김호병 8b  3e  de  4e  \n",
       "202211112 양슬아 7b  a3  ad  4e  \n",
+      "202211083 박준수 b7  ba  c0  5c  \n",
       "202211052 김현민 f3  07  68  b5  \n",
       "202211142 이연수 e6  c4  33  04  \n",
       "202211195 조후연 c6  f5  32  04  \n",
@@ -118,19 +235,21 @@
       "202211099 송유진 9b  69  16  4e  \n",
       "202211053 김현수 03  e9  60  b5  \n",
       "202211020 김동현 53  78  65  b5  \n",
+      "202211193 조현준 06  d9  33  04  \n",
       "202323010 정상헌 db  82  f2  4d  \n",
       "202311155 임정민 97  2b  88  5c  \n",
       "202311051 김예원 d7  c7  c0  5c  \n",
       "202311044 김선규 b7  41  c1  5c  \n",
       "202311140 이윤호 db  dc  23  4e  \n",
       "202311129 이민규 ab  e0  d6  4e  \n",
-      "202311170 정혜진 None\n",
+      "202311170 정혜진 67  80  c0  5c  \n",
       "202311088 박재현 bb  bf  a4  4e  \n",
       "202311181 조한준 0b  98  1c  4e  \n",
       "202311098 서주혁 1b  3b  61  4e  \n",
       "202311206 허준서 27  f7  b5  5c  \n",
       "202311037 김범수 57  4a  9f  5c  \n",
-      "202311001 강동원 None\n",
+      "202311019 김도윤 c7  48  88  5c  \n",
+      "202311001 강동원 97  9f  a2  5c  \n",
       "202311182 조형준 cb  42  04  4e  \n",
       "202311025 김동현 d7  6a  cb  5c  \n",
       "202311180 조준호 eb  47  fe  4d  \n",
@@ -140,13 +259,11 @@
       "202311077 박민규 9b  4b  df  4e  \n",
       "202311160 전선애 a7  f7  cb  5c  \n",
       "202311024 김동헌 67  03  ae  5c  \n",
-      "202311006 고묘정 None\n",
       "202311130 이민재 3b  46  9b  4e  \n",
       "202311143 이재헌 16  74  33  04  \n",
       "202311123 윤우성 1b  a2  b1  4e  \n",
       "202311127 이나민 eb  36  a3  4e  \n",
       "202311175 조승완 67  ef  c3  5c  \n",
-      "202311089 박정혁 6b  12  61  4e  \n",
       "202311095 변호빈 db  c5  77  4e  \n",
       "202311084 박은지 8b  2d  0b  4e  \n",
       "202311134 이상윤 76  8e  33  04  \n",
@@ -172,8 +289,7 @@
       "202311210 홍의성 c7  f6  c8  5c  \n",
       "202311007 고재호 17  9d  ca  5c  \n",
       "202311122 윤신희 4b  67  d9  4e  \n",
-      "202311085 박은혜 None\n",
-      "202311188 최가영 None\n",
+      "202311188 최가영 eb  4c  79  4e  \n",
       "202311005 강태윤 46  9c  31  04  \n",
       "202311191 최연우 cb  08  8b  4e  \n",
       "202311055 김유진 cb  60  06  4e  \n",
@@ -200,7 +316,9 @@
       "202311046 김수민 d7  27  c6  5c  \n",
       "202311144 이종경 47  3d  c4  5c  \n",
       "202311017 김다영 57  b7  b6  5c  \n",
-      "202311156 장민구 None\n"
+      "202311156 장민구 17  95  c4  5c  \n",
+      "202311104 안서연 cb  38  96  4e  \n",
+      "202443005 김승섭 7d  ec  1f  c5  \n"
      ]
     }
    ],
@@ -209,7 +327,7 @@
     "df['Name'] = ['None'] * len(df_ID)\n",
     "df['UID'] = ['None'] * len(df_ID)\n",
     "\n",
-    "for i in range(len(df_data)):\n",
+    "for i in range(len(df_ID)):\n",
     "    sid = df_ID['Student ID'][i]\n",
     "    name = df_ID.loc[df_ID['Student ID']==sid, 'Name'].values[0]\n",
     "\n",
