--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_date = '2023-05-23'\n",
+    "class_date = '2024-03-06'\n",
     "df_class = pd.read_csv('./data/card_data_'+class_date+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,10 +77,13 @@
     "for i in range(len(df_class)):\n",
     "    (hour, minute, second) = df_class['Time'][i].split(\":\")\n",
     "\n",
+    "    df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
+    "    \"\"\"\n",
     "    if(int(hour) > 16 and int(minute) > 5):\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'L'\n",
     "    else:\n",
     "        df_att.loc[df_att['Student ID'] == df_class['Student ID'][i], class_date] = 'A'\n",
+    "    \"\"\"\n",
     "\n",
     "#수기 출석(201911048 shalstjd)\n",
     "#df_att.loc[df_att['Student ID'] == 202211159, class_date] = 'A'\n",
@@ -106,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
