--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -100,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MouseStudy",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -116,12 +116,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "932df198d7dcd685ab299fc36149492c0480a183e04d308adef0af65ac800552"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
